--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
+autopep8==1.7.0
+cffi==1.15.1
+charset-normalizer==2.1.0
+cryptography==37.0.4
 pdfminer==20191125
+pdfminer.six==20220524
+pycodestyle==2.9.1
+pycparser==2.21
 pycryptodome==3.15.0
+six==1.16.0
+sortedcontainers==2.4.0
+toml==0.10.2
